--- a/virtual_selector.css
+++ b/virtual_selector.css
@@ -62,7 +62,7 @@ input.virtual-selector-search {
   position: relative;
   width: 100%;
   background: white;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 0;
 }
 
