--- a/virtual_selector.css
+++ b/virtual_selector.css
@@ -8,7 +8,7 @@
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 0 1rem 1rem 1rem;
-  position: relative;
+  position: absolute;
   overflow-y: auto; 
 }
 
