fix 1st loade total data bug

--- a/src/virtual_selector.css
+++ b/src/virtual_selector.css
@@ -72,6 +72,36 @@ input.virtual-selector-search {
   padding: 0;
 }
 
+.spinner-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #007bff;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.option-li-loding {
+  padding-left: 0.5rem;
+  list-style: none;
+}
+
 .option-li {
   padding-left: 0.5rem;
   list-style: none;
